@@ -1,7 +1,8 @@
 1.10.3
 * Tools/balio: Some improvements around blockchair.com and blockcypher.com API
 * Tools/balio: Fixed balance fetching for Litecoin
-* Lib: New function btc.ExtractOrdinaryFile() - to extract the files from the segwit records
+* Lib: New functions (btc.Tx).ContainsOrdFile() and btc.ExtractOrdFile() - for files stored in txs, as per github.com/casey/ord
+* Tools/bdb - new command "-ord" to extract above mentioned files from the blockchain
 
 1.10.2 - 2022-09-06:
 * Client: New config value "Memory.CompressBlockDB" (default true)
